src/test/deca/syntax/invalid/print/unclosed_parenthesis_print_11.deca
// Description:
//    Tests a syntactically incorrect program for a print call with a missing close parenthesis
//
// Results:
//    Line 11 : Error, unmatched parenthesis. Expected a ')'.
//
// History:
//    created on 17/12/2024

{
        print("Hello";
}